--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@
 body {
 	margin: 0;
 	--color-text: #fff;
-    --color-bg: #131212;
+    --color-bg: #0d0e16;
     --color-link: #85a5e0;
     --color-link-hover: #666;
 	--font-title: ambroise-firmin-std, serif;
