--- a/css/base.css
+++ b/css/base.css
@@ -12,7 +12,7 @@ body {
 	margin: 0;
 	--color-text: #fff;
     --color-bg: #171818;
-    --color-link: #768761;
+    --color-link: #db4d4d;
     --color-link-hover: #666;
 	--font-title: ambroise-firmin-std, serif;
 	color: var(--color-text);
@@ -26,11 +26,11 @@ body {
 }
 
 .demo-3 {
-	--color-link: #db4d4d;
+	--color-link: #43a0c8;
 }
 
 .demo-4 {
-	--color-link: #59a8b9;
+	--color-link: #cb7939;
 }
 
 canvas {
